plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"powers" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

fabricApi {
	configureTests {
		createSourceSet = true
		modId = "powers-gametest"
		enableGameTests = true
		enableClientGameTests = false
		eula = true
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	testImplementation "org.junit.jupiter:junit-jupiter:6.0.3"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:6.0.3"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}

	exclude "**/.DS_Store"
}

tasks.register("validatePowerResources", Exec) {
	group = "verification"
	description = "Validates JSON, models, textures, translations, recipes and namespace safety."
	commandLine "python3", "scripts/validate_resources.py", "--root", "src/main/resources"
}

tasks.register("auditJavaSources", Exec) {
	group = "verification"
	description = "Verifies the exact-version manifest for every production Java source."
	commandLine "python3", "scripts/audit_java_sources.py", "--check"
}

tasks.register("auditNonItemAssets", Exec) {
	group = "verification"
	description = "Verifies the exact-version manifest for every non-item POWERS asset."
	commandLine "python3", "scripts/audit_non_item_assets.py", "--check"
}

tasks.register("generateMagicDocs", JavaExec) {
	group = "documentation"
	description = "Regenerates the canonical action and exhaustive interaction documents."
	dependsOn("classes")
	classpath = sourceSets.main.runtimeClasspath
	mainClass = "com.powers.magic.MagicDocumentation"
	args projectDir.absolutePath
}

tasks.register("verifyMagicDocs", JavaExec) {
	group = "verification"
	description = "Rejects stale canonical magic interaction documents."
	dependsOn("classes")
	classpath = sourceSets.main.runtimeClasspath
	mainClass = "com.powers.magic.MagicDocumentation"
	args projectDir.absolutePath, "--check"
}

tasks.named("check") {
	dependsOn("validatePowerResources")
	dependsOn("auditJavaSources")
	dependsOn("auditNonItemAssets")
	dependsOn("verifyMagicDocs")
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
	it.options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked", "-Werror"]
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

tasks.named("sourcesJar") {
	// Split source sets legitimately contain the same package-info path; publish one canonical copy.
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
